--- a/ionic2-ts-sidemenu1/package.json
+++ b/ionic2-ts-sidemenu1/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
+    "@stomp/ng2-stompjs": "^0.6.2",
+    "angular2-uuid": "^1.1.1",
     "ionic-angular": "2.0.1",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.4.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
   },
@@ -34,12 +36,15 @@
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
-    "cordova-plugin-console",
     "cordova-plugin-statusbar",
     "cordova-plugin-device",
     "cordova-plugin-splashscreen",
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "-vs-binding": { "BeforeBuild": [ "ionic:build" ] }
+  "-vs-binding": {
+    "BeforeBuild": [
+      "ionic:build"
+    ]
+  }
 }
