--- a/SSoTmeProject.json
+++ b/SSoTmeProject.json
@@ -25,7 +25,6 @@
         "LowerHyphenName": "text-to-word-list-xml",
         "InputFileTypeId": "6c58b9cb-e109-4273-a52b-c8a68f4009da",
         "OutputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
-        "UsageCount": 1125,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -62,7 +61,6 @@
         "ReadMeMD": "Converts a wordlist xml created by the [codee42/text-to-wordlist-xml] tool into a Renames.Csv file which can then be turned into an Odxml file.",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "2b02094e-3b80-4a07-8db2-0c2f38d44328",
-        "UsageCount": 856,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -81,8 +79,8 @@
       "CLIHandler": null,
       "ProjectTranspilerId": "fc5431b0-3a67-4fc6-86ce-922a8076f4ec",
       "Name": "WordlistXmlToRenamesCsv",
-      "RelativePath": "/ODXML",
-      "CommandLine": "wordlist-xml-to-renames-csv -i ..\\SSoT\\ProjectDescription.txt.xml -i Renames.csv"
+      "RelativePath": "/SSoT",
+      "CommandLine": "wordlist-xml-to-renames-csv -i .\\ProjectDescription.txt.xml -i PrimarySchema.csv"
     },
     {
       "MatchedTranspiler": {
@@ -101,7 +99,6 @@
         "InputDescriptionMD": "The input CSV can have\r\nFromName (object | object.property)\r\nToName (object | property)\r\nParentName\r\nInclude (true | false)\r\nDescription\r\nDataType\r\nDataLength\r\n",
         "InputFileTypeId": "2b02094e-3b80-4a07-8db2-0c2f38d44328",
         "OutputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
-        "UsageCount": 921,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -121,7 +118,7 @@
       "ProjectTranspilerId": "e22ecc80-217b-4c99-8b6c-f32cbdb51f2e",
       "Name": "RenamesCSVToOdxml",
       "RelativePath": "/ODXML",
-      "CommandLine": "odxml42/renames-csv-to-odxml -i .\\Renames.csv"
+      "CommandLine": "odxml42/renames-csv-to-odxml -i ..\\SSoT\\PrimarySchema.csv"
     },
     {
       "MatchedTranspiler": {
@@ -142,7 +139,6 @@
         "ExampleMD": "ssotme -install xml-xslt-transform -i MyData.xml -i CreateDocs.xslt",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "952e47eb-3448-4627-8dc4-93dab494c957",
-        "UsageCount": 5360,
         "Category": "type-conversion",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -182,7 +178,6 @@
         "ReadMeMD": "Adds any missing tables and relationships in a SQL Server database based on an ODXML Schema description.",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "1136a8fc-7ced-47c2-b08d-1ff447a82b01",
-        "UsageCount": 1036,
         "Category": "sql-server",
         "TranspileRequests": [],
         "TranspilerInstances": [],
@@ -221,7 +216,6 @@
         "ReadMeMD": "param name=\"include-list-prefix\" select=\"true\"\r\nWill include the fieldname of the referenced object before lists so that if a child object has multiple references to an object, the collections on the parent will be distinguished by the name of the child properties.\r\n\r\nparam name=include-sdm-expand=false\r\nparam name=include-load-methods=true\r\n\r\nparam name=\"include-inheritance\" select=\"true\"\r\nIf a relationship exists on the primary key fo the object, it will be infered to \"descend\" from the refrenced object.\r\n\r\nparam name=\"pluralize-json-references\" select=\"true\"\r\nDetermines if the \"original name\" should be pluraized in the Json serialization header.\r\n\r\nparam name=sdm--namespace = 'using KP.ODXML7.SqlDataManager.{project-name}.SqlDataManagement;'\r\n\r\n\r\nparam name=extensions-namespace = 'CoreLibrary.Extensions'\r\n\r\nparam name=serialize-to-original-names=\"'false\"  \r\nInidicates if the json formatting should use original names\r\n\r\nparam name=\"csproj-filename\" = ''\r\nparam name=\"output-csproj-filename\" = ''\r\nparam name=\"relative-path\" = ''\r\n",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "47f5fc9f-0c22-4f73-8d18-0544a7f05d7b",
-        "UsageCount": 1519,
         "Category": "dot-net",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -264,7 +258,6 @@
         "ExampleMD": "ssotme -install app-states-csv-to-app-states-xml -i AppStates.csv",
         "InputFileTypeId": "2b02094e-3b80-4a07-8db2-0c2f38d44328",
         "OutputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
-        "UsageCount": 461,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -303,7 +296,6 @@
         "ExampleMD": "ssotme -install app-states-xml-to-app-states-docs -i AppStates.xml",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "d8fc84b7-442d-4c7a-92a0-eefc11391934",
-        "UsageCount": 455,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -340,7 +332,6 @@
         "LowerHyphenName": "ionic-states-from-app-states-xml",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "f8391567-b3d9-4e34-8a45-3d6bd9da4b9b",
-        "UsageCount": 589,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -380,7 +371,6 @@
         "OutputDescriptionMD": "Otuputs a CSharp library which can read/write/udpate the objects described by the input odxml file",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "47f5fc9f-0c22-4f73-8d18-0544a7f05d7b",
-        "UsageCount": 759,
         "Category": "dot-net",
         "TranspileRequests": [],
         "TranspilerInstances": [],
@@ -420,7 +410,6 @@
         "InputDescriptionMD": "param name=\"project-name\" select=\"'REST Collection'\"  \r\nparam name=\"api-uri\" select=\"'http://localhost:64110/api/'\"\r\n",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "e827499f-f215-4b35-8dae-6bd423a75e4c",
-        "UsageCount": 564,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -457,7 +446,6 @@
         "LowerHyphenName": "odxml-to-m-v-c-r-e-s-t-a-p-i",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "47f5fc9f-0c22-4f73-8d18-0544a7f05d7b",
-        "UsageCount": 530,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -495,7 +483,6 @@
         "ReadMeMD": "Examines the schema defined by an Odxml file and creates an interactive DataModel explorer for exploring the structure of the data model defined. \r\n\r\nCreates both a single page version of the docs, as well as a Node.JS website that can be started on demand to explore the data model more interactively.",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "d8fc84b7-442d-4c7a-92a0-eefc11391934",
-        "UsageCount": 1344,
         "Category": "documentation",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -534,7 +521,6 @@
         "LowerHyphenName": "odxml-to-angular-rest-a-p-i",
         "InputFileTypeId": "33de424c-cfe0-498e-ae70-44da375a8fb2",
         "OutputFileTypeId": "f8391567-b3d9-4e34-8a45-3d6bd9da4b9b",
-        "UsageCount": 65,
         "TranspileRequests": [],
         "TranspilerInstances": [],
         "TranspilerVersions": [
@@ -572,7 +558,6 @@
         "ReadMeMD": "One CSV file is created for each \"tab\" in the spreadsheet.",
         "InputFileTypeId": "39d3bcd1-d89f-4361-a3f7-7d5c295132cd",
         "OutputFileTypeId": "2b02094e-3b80-4a07-8db2-0c2f38d44328",
-        "UsageCount": 183,
         "Category": "type-conversion",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -610,7 +595,6 @@
         "LowerHyphenName": "csv-to-smql",
         "InputFileTypeId": "2b02094e-3b80-4a07-8db2-0c2f38d44328",
         "OutputFileTypeId": "87c1c579-ea4f-47db-a064-f26f9ca1d91e",
-        "UsageCount": 71,
         "Category": "sassymq",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -649,7 +633,6 @@
         "ExampleMD": "ssotme sassymq/SmqlToDocs -i .\\HelloWorld.smql",
         "InputFileTypeId": "87c1c579-ea4f-47db-a064-f26f9ca1d91e",
         "OutputFileTypeId": "d8fc84b7-442d-4c7a-92a0-eefc11391934",
-        "UsageCount": 155,
         "Category": "sassymq",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -688,7 +671,6 @@
         "ReadMeMD": ":param name=\"app-config-path\" select=\"'../../../app/app.config'\" \r\n:param name=\"app-state-path\" select=\"'../../../app/app.state'\" ",
         "InputFileTypeId": "87c1c579-ea4f-47db-a064-f26f9ca1d91e",
         "OutputFileTypeId": "f8391567-b3d9-4e34-8a45-3d6bd9da4b9b",
-        "UsageCount": 20,
         "Category": "rabbitmq",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -739,7 +721,6 @@
         "ExampleMD": "ssotme -createDocs",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
-        "UsageCount": 660,
         "Category": "ssotme",
         "TranspileRequests": [],
         "TranspilerInstances": [],
@@ -778,7 +759,6 @@
         "ReadMeMD": "This system tool turns a detailed SPXml file into detailed Html Documentation about how the SSoT.me project is organized. Specifically, how does the tech \"flow\" thorugh the project. ",
         "InputFileTypeId": "f1b92a2a-3f83-4000-9b37-57f920e14419",
         "OutputFileTypeId": "d8fc84b7-442d-4c7a-92a0-eefc11391934",
-        "UsageCount": 613,
         "Category": "ssotme",
         "TranspileRequests": [],
         "TranspilerInstances": [],
@@ -815,7 +795,6 @@
         "LowerHyphenName": "smql-to-rabbit-m-q-config",
         "InputFileTypeId": "87c1c579-ea4f-47db-a064-f26f9ca1d91e",
         "OutputFileTypeId": "c131c623-c204-4f34-b98f-d326bba5042a",
-        "UsageCount": 73,
         "Category": "rabbitmq",
         "IsRecommended": true,
         "TranspileRequests": [],
@@ -858,7 +837,6 @@
         "ExampleMD": "ssotme to-upper-case thisISaTEsT",
         "InputFileTypeId": "6c58b9cb-e109-4273-a52b-c8a68f4009da",
         "OutputFileTypeId": "6c58b9cb-e109-4273-a52b-c8a68f4009da",
-        "UsageCount": 189,
         "Category": "test",
         "TranspileRequests": [],
         "TranspilerInstances": [],
@@ -897,7 +875,6 @@
         "ReadMeMD": "Parameters:\r\n - acronym = \"/SMQLexicon/Acronym\" \r\n - payload-type = concat($acronym, 'Payload')\r\n - actor-base-type = concat($acronym, 'ActorBase')\r\n",
         "InputFileTypeId": "87c1c579-ea4f-47db-a064-f26f9ca1d91e",
         "OutputFileTypeId": "47f5fc9f-0c22-4f73-8d18-0544a7f05d7b",
-        "UsageCount": 146,
         "Category": "rabbitmq",
         "IsRecommended": true,
         "TranspileRequests": [],
