--- a/CoreLibrary/CoreLibrary.csproj
+++ b/CoreLibrary/CoreLibrary.csproj
@@ -59,7 +59,6 @@
     <Compile Include="SassyMQ\Derived\LexiconTerm.cs" />
     <Compile Include="SassyMQ\Derived\PayloadEventArgs.cs" />
     <Compile Include="SassyMQ\Derived\SMQActorBase.cs" />
-    <Compile Include="SassyMQ\Derived\StandardPayload.cs" />
     <Compile Include="SassyMQ\LexiconEnum.cs" />
     <Compile Include="SassyMQ\LexiconTerms.cs" />
     <Compile Include="SassyMQ\LexiconTerms.designer.cs">
@@ -73,6 +72,7 @@
     <Compile Include="SassyMQ\RMQActors\SMQWorld.designer.cs">
       <DependentUpon>SMQWorld.cs</DependentUpon>
     </Compile>
+    <Compile Include="SassyMQ\StandardPayload.cs" />
     <Compile Include="SqlDataAccessLayer\SqlDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
